@@ -1,6 +1,11 @@
 package com.umg.examen.security;
 
-import io.jsonwebtoken.*;
+import io.jsonwebtoken.Claims;
+import io.jsonwebtoken.ExpiredJwtException;
+import io.jsonwebtoken.JwtException;
+import io.jsonwebtoken.Jwts;
+import io.jsonwebtoken.MalformedJwtException;
+import io.jsonwebtoken.UnsupportedJwtException;
 import io.jsonwebtoken.io.Decoders;
 import io.jsonwebtoken.security.Keys;
 import org.slf4j.Logger;
@@ -14,80 +19,112 @@ import org.springframework.stereotype.Component;
 import javax.crypto.SecretKey;
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class JwtTokenProvider {
 
+    public static final String ACCESS_TOKEN_TYPE = "access";
+    public static final String REFRESH_TOKEN_TYPE = "refresh";
+
+    private static final String TOKEN_TYPE_CLAIM = "tokenType";
     private static final Logger log = LoggerFactory.getLogger(JwtTokenProvider.class);
 
     @Value("${app.jwt.secret}")
     private String jwtSecret;
 
-    @Value("${app.jwt.expiration-ms:86400000}")
-    private long jwtExpirationMs;
+    @Value("${app.jwt.access-token-expiration-ms:120000}")
+    private long accessTokenExpirationMs;
 
-    private SecretKey getSigningKey() {
-        byte[] keyBytes = Decoders.BASE64.decode(jwtSecret);
-        return Keys.hmacShaKeyFor(keyBytes);
-    }
+    @Value("${app.jwt.refresh-token-expiration-ms:1800000}")
+    private long refreshTokenExpirationMs;
 
-    public String generateToken(Authentication authentication) {
+    public String generateAccessToken(Authentication authentication) {
         UserDetails userPrincipal = (UserDetails) authentication.getPrincipal();
         List<String> roles = userPrincipal.getAuthorities().stream()
                 .map(GrantedAuthority::getAuthority)
-                .collect(Collectors.toList());
+                .toList();
 
-        Date now = new Date();
-        Date expiryDate = new Date(now.getTime() + jwtExpirationMs);
-
-        return Jwts.builder()
-                .subject(userPrincipal.getUsername())
-                .claim("roles", roles)
-                .issuedAt(now)
-                .expiration(expiryDate)
-                .signWith(getSigningKey())
-                .compact();
+        return generateToken(
+                userPrincipal.getUsername(),
+                roles,
+                ACCESS_TOKEN_TYPE,
+                accessTokenExpirationMs
+        );
     }
 
-    public String generateTokenFromUsername(String username, List<String> roles) {
-        Date now = new Date();
-        Date expiryDate = new Date(now.getTime() + jwtExpirationMs);
+    public String generateRefreshToken(Authentication authentication) {
+        UserDetails userPrincipal = (UserDetails) authentication.getPrincipal();
+        return generateToken(
+                userPrincipal.getUsername(),
+                null,
+                REFRESH_TOKEN_TYPE,
+                refreshTokenExpirationMs
+        );
+    }
 
-        return Jwts.builder()
-                .subject(username)
-                .claim("roles", roles)
-                .issuedAt(now)
-                .expiration(expiryDate)
-                .signWith(getSigningKey())
-                .compact();
+    public String generateAccessTokenFromUsername(String username, List<String> roles) {
+        return generateToken(username, roles, ACCESS_TOKEN_TYPE, accessTokenExpirationMs);
     }
 
     public String getUsernameFromJwt(String token) {
+        return parseClaims(token).getSubject();
+    }
+
+    public boolean validateAccessToken(String token) {
+        return validateToken(token, ACCESS_TOKEN_TYPE);
+    }
+
+    public boolean validateRefreshToken(String token) {
+        return validateToken(token, REFRESH_TOKEN_TYPE);
+    }
+
+    private String generateToken(String username, List<String> roles, String tokenType, long expirationMs) {
+        Date now = new Date();
+        Date expiryDate = new Date(now.getTime() + expirationMs);
+
+        var builder = Jwts.builder()
+                .subject(username)
+                .claim(TOKEN_TYPE_CLAIM, tokenType)
+                .issuedAt(now)
+                .expiration(expiryDate);
+
+        if (roles != null) {
+            builder.claim("roles", roles);
+        }
+
+        return builder
+                .signWith(getSigningKey())
+                .compact();
+    }
+
+    private boolean validateToken(String token, String expectedTokenType) {
+        try {
+            Claims claims = parseClaims(token);
+            return expectedTokenType.equals(claims.get(TOKEN_TYPE_CLAIM, String.class));
+        } catch (SecurityException | MalformedJwtException e) {
+            log.warn("Firma JWT inválida: {}", e.getMessage());
+        } catch (ExpiredJwtException e) {
+            log.info("Token JWT expirado: {}", e.getMessage());
+        } catch (UnsupportedJwtException e) {
+            log.warn("Token JWT no soportado: {}", e.getMessage());
+        } catch (IllegalArgumentException e) {
+            log.warn("La cadena de claims JWT está vacía: {}", e.getMessage());
+        } catch (JwtException e) {
+            log.warn("Token JWT inválido: {}", e.getMessage());
+        }
+        return false;
+    }
+
+    private Claims parseClaims(String token) {
         return Jwts.parser()
                 .verifyWith(getSigningKey())
                 .build()
                 .parseSignedClaims(token)
-                .getPayload()
-                .getSubject();
+                .getPayload();
     }
 
-    public boolean validateToken(String authToken) {
-        try {
-            Jwts.parser()
-                    .verifyWith(getSigningKey())
-                    .build()
-                    .parseSignedClaims(authToken);
-            return true;
-        } catch (SecurityException | MalformedJwtException e) {
-            log.error("Firma JWT inválida: {}", e.getMessage());
-        } catch (ExpiredJwtException e) {
-            log.error("Token JWT expirado: {}", e.getMessage());
-        } catch (UnsupportedJwtException e) {
-            log.error("Token JWT no soportado: {}", e.getMessage());
-        } catch (IllegalArgumentException e) {
-            log.error("La cadena de claims JWT está vacía: {}", e.getMessage());
-        }
-        return false;
+    private SecretKey getSigningKey() {
+        byte[] keyBytes = Decoders.BASE64.decode(jwtSecret);
+        return Keys.hmacShaKeyFor(keyBytes);
     }
 }
